Fixed Z-index of nav

--- a/docs/css/css.css
+++ b/docs/css/css.css
@@ -5,7 +5,7 @@ body {padding: 0; margin: 0}
 p, h1, h2, h3, h4, h5, h6 {padding: 0; margin: 0}
 
 /* Top nav */
-#top-nav {position: fixed; top: 16px; left: 16px}
+#top-nav {position: fixed; top: 16px; left: 16px; z-index: 2}
 #top-nav img {display: block}
 #top-nav .button {width: 64px; border-radius: 25%; cursor: pointer; transition: 0.3s; float: left; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25)}
 #top-nav .button:hover {transform: rotate(45deg) scale(0.75);}
